Fix block title aligment on mobile devices

--- a/css/main.less
+++ b/css/main.less
@@ -5402,7 +5402,10 @@ textarea {
         padding-bottom: 14px;
 
         .expandable-block-content-title {
+            display: flex;
             flex: 0 1 718px;
+            min-height: 40px;
+            align-items: center;
             font-size: 20px;
             margin-right: 20px;
             line-height: 2;
